compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__redundant_3.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\ncase x {\n59 -> \"gleew\"\n14 -> \"glabber\"\n1 -> \"\"\n_ -> \"glooper\"\n2 -> \"\"\n3 -> \"glen\"\n4 -> \"glew\"\n}\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
case x {
59 -> "gleew"
14 -> "glabber"
1 -> ""
_ -> "glooper"
2 -> ""
3 -> "glen"
4 -> "glew"
}
}


----- WARNING
warning: Unreachable case clause
  ┌─ /src/warning/wrn.rakun:8:1
  │
8 │ 2 -> ""
  │ ^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.

warning: Unreachable case clause
  ┌─ /src/warning/wrn.rakun:9:1
  │
9 │ 3 -> "glen"
  │ ^^^^^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.

warning: Unreachable case clause
   ┌─ /src/warning/wrn.rakun:10:1
   │
10 │ 4 -> "glew"
   │ ^^^^^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.
