compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__result_bool_5.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 229
expression: "\npub fn main(x) {\n  case x {\n    Ok(True) -> 1\n    Ok(False) -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    Ok(True) -> 1
    Ok(False) -> 2
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     Ok(True) -> 1
5 │ │     Ok(False) -> 2
6 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Error(_)
