compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__result_bool_8.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 268
expression: "\npub fn main(x) {\n  case x {\n    Ok(False) -> 1\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     Ok(False) -> 1
5 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Error(_)
    Ok(True)
