compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__result_error.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\n  case x {\n    Error(_) -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    Error(_) -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     Error(_) -> 1
5 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Ok(_)
